# atecc_pico

./: CMakeLists.txt  README.md
src/: atecc_crc.c  atecc_pico.c  atecc_pico.h
